# ups_manifestor

./: .coveragerc  .flake8  .gitignore  .pre-commit-config.yaml  main.py  pyproject.toml  pytest.ini
.github/workflows/: ci.yml
tests/: conftest.py  test_api_requests.py  test_main.py  test_settings.toml
tests/test_models/: conftest.py  test_current_shipments.py  test_shipment_exports.py  test_shipment_file_manager.py
ups_manifestor/: __init__.py  __main__.py  api_requests.py  application.py  exceptions.py  models.py  settings.py
