[tool.poetry]
name = "ups_manifestor"
version = "0.0.1"
description = ""
authors = ["Luke Shiner <luke@lukeshiner.com>"]
license = "MIT"
readme = "README.rst"

[tool.coverage.run]
branch = true
omit = ["tests/*",]

[tool.poetry.dependencies]
python = "^3.11"
pysimplegui = "<6.0.0"
requests = "^2.31.0"
toml = "^0.10.2"

[tool.poetry.dev-dependencies]
black = ">=21.10b0"
flake8 = ">=4.0.1"
flake8-docstrings = ">=1.6.0"
flake8-pyi = ">=22.8.0"
isort = ">=5.10.0"
pytest = ">=6.2.5"
pytest-cov = ">=3.0.0"
coveralls = ">=3.3.0"
Sphinx = ">=4.2.0"
sphinx-rtd-theme = ">=1.0.0"


[build-system]
requires = ["poetry>=1.1.6"]
build-backend = "poetry.masonry.api"
